@@ -3,6 +3,7 @@ Version: 2.0.7
   Bugfixes:
     - Fixed stone, coal, and crude oil being locked behind off-planet science packs when using "Nauvis has Only Tiberium" setting
     - Fixed Tiberium Node Harvest and AOE Tiberium Node Harvester using the wrong animations
+    - Fixed not being able to add Blue Tiberium to filters prior to researching Blue Tiberium Mutation
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.6
   Bugfixes:
